major or cross-module change was made. Instead changes to modules
will each be tracked separately in this changelog. Feel free to
provide feedback on this approach while we try it out!

Changes in this version:
- Enhancement: ~divide-and-conquer-force~ now checks possible
  integer values for reals not known to be non-integers, based
  on ~*maximum-discretization-range*~.
- Minor incompatible change: Some invalid assumptions in the logic
  for variable multiplication have been removed. This may cause
  infinite search in code which previously (incorrectly) resolved
  to specific values. Thanks to @PHRaposo for [[https://github.com/swapneils/screamer/issues/10][the report]].
- Bugfix: Missing ~local~ declarations have been added to some
  restrict-domain functions, preventing restrictions from one
  nondeterministc path affecting the following pathways. Thanks
  to @PHRaposo for [[https://github.com/swapneils/screamer/issues/10][the report]].
* 5.2 (screamer/core v5.2)
Reverted incompatible change to ~ITH-VALUE~, create ~KTH-VALUE~ and deprecate
~ITH-VALUE~
* 5.1.3 (screamer/core v5.1.1, highlights from screamer/experimental)
Names of sub-systems have been modified to use the ~/<subsection>~
format, per Common Lisp convention.
** screamer/core
- (Untested) Experimental support for ~macrolet~ and ~symbol-macrolet~ forms!
  - This has been tracked as an action item since Screamer 3,
  - Note that (within ~local~ declarations) basic ~trivia~ and ~iterate~ forms
    have been confirmed to work correctly in nondeterministic contexts after
    this change.
  - LOOP may still not work correctly depending on your implementation, however;
    on SBCL at least this appears to be a separate issue from macrolets.
- (Untested) Portable support for deterministic usage of ~handler-bind~,
  ~handler-case~, ~restart-case~, and ~ignore-errors~ within Screamer forms.
  - The creation of choice-points or calling of nondeterministic functions